とりあえず動いた

--- a/eclipse-workspace/demo2/src/main/resources/templates/players/show.html
+++ b/eclipse-workspace/demo2/src/main/resources/templates/players/show.html
@@ -36,7 +36,7 @@
         <a class="btn btn-default" th:href="@{/{id}/edit(id=*{id})}">編集</a>
       </div>
       <div class="pull-right">
-        <a class="btn btn-link" href="/">一覧画面へ</a>
+        <a class="btn btn-link" href="/players">一覧画面へ</a>
       </div>
     </div>
   </body>
