--- a/eclipse-workspace/demo2/src/main/resources/templates/players/edit.html
+++ b/eclipse-workspace/demo2/src/main/resources/templates/players/edit.html
@@ -31,7 +31,7 @@
         <button class="btn btn-default" type="submit">更新</button>
       </form>
       <div class="pull-right">
-        <a class="btn btn-link" href="/">一覧画面へ</a>
+        <a class="btn btn-link" href="/players">一覧画面へ</a>
       </div>
     </div>
   </body>
