--- a/eclipse-workspace/demo2/src/main/resources/templates/players/index.html
+++ b/eclipse-workspace/demo2/src/main/resources/templates/players/index.html
@@ -6,7 +6,7 @@
     <!-- ① -->
     <link rel="stylesheet" href="/css/bootstrap.css" />
     <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap.js"></script>
+    <script src="/js/bootstrap.js" th:src="@{/js/bootstrap.js}"></script>
   </head>
   <body>
     <div class="container">
