--- a/eclipse-workspace/demo2/src/main/resources/templates/players/new.html
+++ b/eclipse-workspace/demo2/src/main/resources/templates/players/new.html
@@ -10,10 +10,10 @@
 <body>
 	<div class="container">
 		<h1>New Player</h1>
-		<form th:action="@{/}" th:method="post">
+		<form th:action="@{/players}" th:method="post">
 			<div class="form-group">
 				<label class="control-label">名前</label>
-				<input class="form-control" type="number" name="name" />
+				<input class="form-control" type="text" name="name" />
 			</div>
 			 <div class="form-group">
 				<label class="control-label">年齢</label>
@@ -30,7 +30,7 @@
         	<button class="btn btn-default" type="submit">作成</button>
       </form>
       <div class="pull-right">
-        <a class="btn btn-link" href="/">一覧画面へ</a>
+        <a class="btn btn-link" href="/players">一覧画面へ</a>
       </div>
      </div>
 </body>
