--- a/Downloads/pleiades-4.8.0-ultimate_20180924/pleiades/workspace/YourDiary/WebContent/template/top.xhtml
+++ b/Downloads/pleiades-4.8.0-ultimate_20180924/pleiades/workspace/YourDiary/WebContent/template/top.xhtml
@@ -4,22 +4,23 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
-	<h:form id="menuber">
-		<p:menuber>
+	<h:form id="menubar">
+		<p:menubar>
 			<p:submenu label="個人設定" icon="ui-icon-wrench">
 				<p:menuitem value="テーマ設定" icon="ui-icon-refresh" action="/changeTheme.xhtml">
 				</p:menuitem>
 			</p:submenu>
-			<p:submenu label="リンク" icon-ui-extlink>
+			<p:submenu label="リンク" icon="ui-icon-extlink">
 				<p:menuitem value="Google" url="http://google.co.jp">
 				</p:menuitem>
 				<p:menuitem value="Yahoo Japan" url="http://yahoo.co.jp">
 				</p:menuitem>
 			</p:submenu>
+
 			<p:submenu label="ログアウト" icon="ui-icon-close" style="float:right">
 				<p:menuitem value="ログアウト" action="#{sessionInfo.logout}">
 				</p:menuitem>
 			</p:submenu>
-		</p:menuber>
+		</p:menubar>
 	</h:form>
 </html>
