--- a/WebContent/template/left.xhtml
+++ b/WebContent/template/left.xhtml
@@ -7,7 +7,7 @@
 <h:form id="panelMenus">
 	<p:panelMenu style="width:300px">
 		<p:submenu label="映画" icon="ui-icon-note">
-			<p:menuitem value="検索" action="/searchMovie.xhtml" icon="ui-icon-search" />
+			<p:menuitem value="検索" icon="ui-icon-search" action="#{searchMovie.set}" />
 			<p:menuitem value="レンタル履歴" action="/lendHistory.xhtml"
 				icon="ui-icon-cart" />
 		</p:submenu>
@@ -26,8 +26,8 @@
 		<p:separator />
 		<p:submenu label="管理">
 			<p:submenu label="ユーザ" icon="ui-icon-home">
-				<p:menuitem value="ユーザの編集" action="/editUser.xhtml"
-					icon="ui-icon-pencil" />
+				<p:menuitem value="ユーザの編集" icon="ui-icon-pencil"
+					 action="/editUser.xhtml"/>
 			</p:submenu>
 			<p:submenu label="映画" icon="ui-icon-disk">
 				<p:menuitem value="映画の編集" action="/editMovie.xhtml"
