--- a/WebContent/template/top.xhtml
+++ b/WebContent/template/top.xhtml
@@ -7,7 +7,8 @@
 	<h:form id="menubar">
 		<p:menubar>
 			<p:submenu label="個人設定" icon="ui-icon-wrench">
-				<p:menuitem value="テーマ設定" icon="ui-icon-refresh" action="/changeTheme.xhtml">
+				<p:menuitem value="テーマ設定" icon="ui-icon-refresh"
+				action="/changeTheme.xhtml">
 				</p:menuitem>
 			</p:submenu>
 			<p:submenu label="リンク" icon="ui-icon-extlink">
