映画編集正常

--- a/WebContent/template/left.xhtml
+++ b/WebContent/template/left.xhtml
@@ -28,7 +28,7 @@
 		<p:submenu label="管理">
 			<p:submenu label="ユーザ" icon="ui-icon-home">
 				<p:menuitem value="ユーザの編集" icon="ui-icon-pencil"
-					 action="/editUser.xhtml"/>
+					 action="editUser.xhtml"/>
 			</p:submenu>
 			<p:submenu label="映画" icon="ui-icon-disk">
 				<p:menuitem value="映画の編集" action="/editMovie.xhtml"
