--- a/WebContent/template/top.xhtml
+++ b/WebContent/template/top.xhtml
@@ -7,19 +7,15 @@
 	<h:form id="menubar">
 		<p:menubar>
 			<p:submenu label="個人設定" icon="ui-icon-wrench">
-				<p:menuitem value="テーマ設定" icon="ui-icon-refresh" action="/changeTheme.xhtml">
-				</p:menuitem>
+				<p:menuitem value="テーマ設定" icon="ui-icon-refresh" action="/changeTheme.xhtml"/>
 			</p:submenu>
 			<p:submenu label="リンク" icon="ui-icon-extlink">
-				<p:menuitem value="Google" url="http://google.co.jp">
-				</p:menuitem>
-				<p:menuitem value="Yahoo Japan" url="http://yahoo.co.jp">
-				</p:menuitem>
+				<p:menuitem value="Google" url="https://google.co.jp"/>
+				<p:menuitem value="Yahoo Japan" url="https://yahoo.co.jp"/>
 			</p:submenu>
 
 			<p:submenu label="ログアウト" icon="ui-icon-close" style="float:right">
-				<p:menuitem value="ログアウト" action="#{sessionInfo.logout}">
-				</p:menuitem>
+				<p:menuitem value="ログアウト" action="#{sessionInfo.logout}"/>
 			</p:submenu>
 		</p:menubar>
 	</h:form>
