--- a/WebContent/template/left.xhtml
+++ b/WebContent/template/left.xhtml
@@ -7,7 +7,7 @@
 <h:form id="panelMenus">
 	<p:panelMenu style="width:300px">
 		<p:submenu label="映画" icon="ui-icon-note">
-			<p:menuitem value="検索" icon="ui-icon-search" action="#{searchMovie.set}" />
+			<p:menuitem value="検索" action="/searchMovie.xhtml" icon="ui-icon-search" />
 			<p:menuitem value="レンタル履歴" action="/lendHistory.xhtml" icon="ui-icon-cart" />
 		</p:submenu>
 		<p:submenu label="プロフィール" icon="ui-icon-person">
