--- a/WebContent/template/mainTemplate.xhtml
+++ b/WebContent/template/mainTemplate.xhtml
@@ -10,7 +10,7 @@
 		<title>Your Library</title>
 	</h:head>
 		<h:body>
-			<table cellspacing="10px">
+			<table>
 				<tr>
 					<td id="left" valign="top">
 					<ui:insert name="left">
